--- a/index.html
+++ b/index.html
@@ -1,10 +1,102 @@
-<!DOCTYPE html>
 <html>
+<head>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+</head>
 <body>
 
-<h1>Emese Balla</h1>
+<!-- header -->
+<header id="header-wrapper" class="bg-dark">
+<div class="container text-light">
+   <div class="row p-5">
+      <div class="col text-center">
+<h1>EMESE BALLA</h1>
+<hr>
+<h2>JUNIOR QA ENGINEER</h2>
+   </div>
+   </div>
+</div>
+</header>
+<!-- main -->
+<main id="main-wrapper" class="bg-light">
+<div class="container text-dark">
+   <div class="row p-5">
+      <div class="col-4"</div>
 
-<p>Emese Balla's page</p>
+<h3>PROFILE</h3>
+<p>
+I am an experienced 2nd line support
+specialist seeking a full-time position
+in the field of technology where I can
+apply my knowledge and skills for
+continuous improvement.
+</p>
+<h3>CONTACT</h3>
+<p>
+Mobile:06309203174
+Email:emmeseballa@gmail.com
+Budapest,Hungary
+LinkedIn:https://www.linkedin.com/in/emese-balla-727077155/
+</p>
+<h3>EDUCATION</h3>
+<p>
+JOHN WESLEY COLLEGE BsC
+Disaster–EnvironmentManagement
+</p>
+   </div>
+
+<div class="col">
+  <h3>COMPUTER SKILLS</h3>
+<ul>
+<li>JIRA</li>
+<li>Zendesk</li>
+<li>MS Word</li>
+<li>MS Excel</li>
+<li>PowerPoint</li>
+</ul>
+
+<h3>WORK EXPERIENCE</h3>
+<h4>JUNIOR QA ENGINEER, LILIGO</h4>
+<h5>SEPT 2019 - BUDAPEST</h5>
+<ul>
+	<li>QA Engineering</li>
+</ul>
+
+<h4>SERVICE SUPPORT ENGINEER, BT</h4>
+<h5>JAN - SEPT 2019 - BUDAPEST</h5>
+<ul>
+<li> Troubleshooting of network-level related incidents and outages</li>
+<li>Investigation of technical problems</li>
+<li> Logging incidents and their status in management system with
+all related information (logs, reports) and ensuring KPIs SLA are
+achieved</li>
+<li>Liaising with other second line operations groups and
+development to solve incidents</li>
+<li>Ensures that application operations SLA with end-users is held</li>
+<li>Collaborating with internal and external 3rd party suppliers</li>
+</ul>
+
+<h4>2ND LINE SUPPORT SPECIALIST, KING</h4>
+<h5>NOV 2016 - OCT 2018 - STOCKHOLM</h5>
+<ul>
+	<li>QA Engineering</li>
+</ul>
+<li>Logging bugs and their status in JIRA with collecting all related information(logs,reports)</li>
+<li>Forwarding required and precise information to further points of escalation across the business</li>
+<li>Perform analysis and regular reporting</li>
+<li>Liaising with other second line operations groups and
+development to solve incidents</li>
+<li>Investigating,identifying and providing timely solutions to all technical issues players may be facing</li>
+
+
+
+
+
+   </div>
+   </div>
+</div>
+</main>
+
 
 </body>
 </html>
