--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@ Email:emmeseballa@gmail.com
 Budapest,Hungary
 LinkedIn:https://www.linkedin.com/in/emese-balla-727077155/
 </p>
+
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d18133.662938581583!2d19.03532490460338!3d47.49799500568051!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDfCsDI5JzU0LjIiTiAxOcKwMDInMjUuNyJF!5e0!3m2!1shu!2shu!4v1599753746237!5m2!1shu!2shu" width="310" height="350" frameborder="0" style="border:0; border-radius: 30px; filter: (1);" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+
 <h3>EDUCATION</h3>
 <p>
 JOHN WESLEY COLLEGE BsC
