--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <head>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link href="style.css" rel="stylesheet">
+  <script type="text/javascript" src="index.js"></script>
 </head>
 <body>
 
@@ -21,7 +23,7 @@
 <main id="main-wrapper" class="bg-light">
 <div class="container text-dark">
    <div class="row p-5">
-      <div class="col-4"</div>
+      <div class="col-4 bg-pink p-4"</div>
 
 <h3>PROFILE</h3>
 <p>
@@ -32,14 +34,17 @@ apply my knowledge and skills for
 continuous improvement.
 </p>
 <h3>CONTACT</h3>
+<p>Mobile:06309203174</p>
+<p>Email:emmeseballa@gmail.com</p>
+<p>Budapest,Hungary</p>
 <p>
-Mobile:06309203174
-Email:emmeseballa@gmail.com
-Budapest,Hungary
-LinkedIn:https://www.linkedin.com/in/emese-balla-727077155/
+<a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/emese-balla-727077155/">
+  <img height="35" width="50" src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/linkedin.svg" alt="linkedin icon">
+</a>
 </p>
 
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d18133.662938581583!2d19.03532490460338!3d47.49799500568051!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDfCsDI5JzU0LjIiTiAxOcKwMDInMjUuNyJF!5e0!3m2!1shu!2shu!4v1599753746237!5m2!1shu!2shu" width="310" height="350" frameborder="0" style="border:0; border-radius: 30px; filter: (1);" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d18133.662938581583!2d19.03532490460338!3d47.49799500568051!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDfCsDI5JzU0LjIiTiAxOcKwMDInMjUuNyJF!5e0!3m2!1shu!2shu!4v1599753746237!5m2!1shu!2shu" width="280" height="320
+" frameborder="0" style="border:0; border-radius: 30px; filter: (1);" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 
 <h3>EDUCATION</h3>
 <p>
@@ -83,13 +88,14 @@ development to solve incidents</li>
 <h5>NOV 2016 - OCT 2018 - STOCKHOLM</h5>
 <ul>
 	<li>QA Engineering</li>
-</ul>
+
 <li>Logging bugs and their status in JIRA with collecting all related information(logs,reports)</li>
 <li>Forwarding required and precise information to further points of escalation across the business</li>
 <li>Perform analysis and regular reporting</li>
 <li>Liaising with other second line operations groups and
 development to solve incidents</li>
 <li>Investigating,identifying and providing timely solutions to all technical issues players may be facing</li>
+</ul>
 
 
 
