read time function added

--- a/index.html
+++ b/index.html
@@ -97,8 +97,7 @@ development to solve incidents</li>
 <li>Investigating,identifying and providing timely solutions to all technical issues players may be facing</li>
 </ul>
 
-
-
+<p id="minute">Loading..</p>
 
 
    </div>
