--- a/numbergame.html
+++ b/numbergame.html
@@ -1,24 +1,15 @@
-<!DOCTYPE html>
 <html>
   <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="style.css" rel="stylesheet">
   <script type="text/javascript" src="index.js"></script>
+  
     <meta charset="utf-8">
-
-    <title>Number guessing game</title>
 
     <style>
       html {
         font-family: sans-serif;
-      }
-
-      body {
-        width: 50%;
-        max-width: 800px;
-        min-width: 480px;
-        margin: 0 auto;
       }
 
       .lastResult {
@@ -26,6 +17,24 @@
         padding: 3px;
       }
     </style>
+  </head>
+
+  <body>
+    <h1>Number guessing game</h1>
+
+    <p>We have selected a random number between 1 and 100. See if you can guess it in 10 turns or fewer. We'll tell you if your guess was too high or too low.</p>
+
+    <div class="form">
+      <label for="guessField">Enter a guess: </label>
+      <input type="text" id="guessField" class="guessField">
+      <input type="submit" value="Submit guess" class="guessSubmit">
+    </div>
+
+    <div class="resultParas">
+      <p class="guesses"></p>
+      <p class="lastResult"></p>
+      <p class="lowOrHi"></p>
+    </div>
   </head>
   
 <body>
@@ -74,16 +83,6 @@ continuous improvement.
 JOHN WESLEY COLLEGE BsC
 Disaster–EnvironmentManagement
 </p>
-
-<div class="resultParas">
-  <p class="guesses"></p>
-  <p class="lastResult"></p>
-  <p class="lowOrHi"></p>
-</div>
-
-<label for="guessField">Enter a guess: </label><input type="text" id="guessField" class="guessField">
-<input type="submit" value="Submit guess" class="guessSubmit">
-
    </div>
 
 <div class="col">
