logo + weather info added

--- a/index.html
+++ b/index.html
@@ -1,110 +1,109 @@
 <html>
-<head>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link href="style.css" rel="stylesheet">
-  <script type="text/javascript" src="index.js"></script>
-</head>
-<body>
-
-<!-- header -->
-<header id="header-wrapper" class="bg-dark">
-<div class="container text-light">
-   <div class="row p-5">
-      <div class="col text-center">
-<h1>EMESE BALLA</h1>
-<hr>
-<h2>JUNIOR QA ENGINEER</h2>
-   </div>
-   </div>
-</div>
-</header>
-<!-- main -->
-<main id="main-wrapper" class="bg-light">
-<div class="container text-dark">
-   <div class="row p-5">
-      <div class="col-4 bg-pink p-4"</div>
-
-<h3>PROFILE</h3>
-<p>
-I am an experienced 2nd line support
-specialist seeking a full-time position
-in the field of technology where I can
-apply my knowledge and skills for
-continuous improvement.
-</p>
-<h3>CONTACT</h3>
-<p>Mobile:06309203174</p>
-<p>Email:emmeseballa@gmail.com</p>
-<p>Budapest,Hungary</p>
-<p>
-<a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/emese-balla-727077155/">
-  <img height="35" width="50" src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/linkedin.svg" alt="linkedin icon">
-</a>
-</p>
-
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d18133.662938581583!2d19.03532490460338!3d47.49799500568051!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDfCsDI5JzU0LjIiTiAxOcKwMDInMjUuNyJF!5e0!3m2!1shu!2shu!4v1599753746237!5m2!1shu!2shu" width="280" height="320
-" frameborder="0" style="border:0; border-radius: 30px; filter: (1);" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-
-<h3>EDUCATION</h3>
-<p>
-JOHN WESLEY COLLEGE BsC
-Disaster–EnvironmentManagement
-</p>
-   </div>
-
-<div class="col">
-  <h3>COMPUTER SKILLS</h3>
-<ul>
-<li>JIRA</li>
-<li>Zendesk</li>
-<li>MS Word</li>
-<li>MS Excel</li>
-<li>PowerPoint</li>
-</ul>
-
-<h3>WORK EXPERIENCE</h3>
-<h4>JUNIOR QA ENGINEER, LILIGO</h4>
-<h5>SEPT 2019 - BUDAPEST</h5>
-<ul>
-	<li>QA Engineering</li>
-</ul>
-
-<h4>SERVICE SUPPORT ENGINEER, BT</h4>
-<h5>JAN - SEPT 2019 - BUDAPEST</h5>
-<ul>
-<li> Troubleshooting of network-level related incidents and outages</li>
-<li>Investigation of technical problems</li>
-<li> Logging incidents and their status in management system with
-all related information (logs, reports) and ensuring KPIs SLA are
-achieved</li>
-<li>Liaising with other second line operations groups and
-development to solve incidents</li>
-<li>Ensures that application operations SLA with end-users is held</li>
-<li>Collaborating with internal and external 3rd party suppliers</li>
-</ul>
-
-<h4>2ND LINE SUPPORT SPECIALIST, KING</h4>
-<h5>NOV 2016 - OCT 2018 - STOCKHOLM</h5>
-<ul>
-	<li>QA Engineering</li>
-
-<li>Logging bugs and their status in JIRA with collecting all related information(logs,reports)</li>
-<li>Forwarding required and precise information to further points of escalation across the business</li>
-<li>Perform analysis and regular reporting</li>
-<li>Liaising with other second line operations groups and
-development to solve incidents</li>
-<li>Investigating,identifying and providing timely solutions to all technical issues players may be facing</li>
-</ul>
-
-<p id="minute">Loading..</p>
-
-
-   </div>
-   </div>
-</div>
-</main>
-
-
-</body>
+  <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="style.css" rel="stylesheet">
+    <script type="text/javascript" src="index.js"></script>
+  </head>
+  <body>
+    <!-- header -->
+    <header id="header-wrapper" class="bg-dark">
+      <div class="container text-light">
+        <div class="row p-5">
+          <div class="col-md-4"">
+            <h1>EMESE BALLA</h1>
+            <hr>
+            <h2>JUNIOR QA ENGINEER</h2>
+          </div>
+		  <div class="col-md-4 offset-md-4 text-right logo">
+		  
+		  EB
+		 </div>
+        </div>
+      </div>
+    </header>
+    <!-- main -->
+    <main id="main-wrapper" class="bg-light">
+      <div class="container text-dark">
+        <div class="row p-5">
+          <div class="col-4 bg-pink p-4"
+        </div>
+        <h3>PROFILE</h3>
+        <p>
+          I am an experienced 2nd line support
+          specialist seeking a full-time position
+          in the field of technology where I can
+          apply my knowledge and skills for
+          continuous improvement.
+        </p>
+        <h3>CONTACT</h3>
+        <p>Mobile:06309203174</p>
+        <p>Email:emmeseballa@gmail.com</p>
+        <p>Budapest,Hungary</p>
+        <p>
+          <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/emese-balla-727077155/">
+          <img height="35" width="50" src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/linkedin.svg" alt="linkedin icon">
+          </a>
+        </p>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d18133.662938581583!2d19.03532490460338!3d47.49799500568051!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDfCsDI5JzU0LjIiTiAxOcKwMDInMjUuNyJF!5e0!3m2!1shu!2shu!4v1599753746237!5m2!1shu!2shu" width="280" height="320
+          " frameborder="0" style="border:0; border-radius: 30px; filter: (1);" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        <h3>EDUCATION</h3>
+        <p>
+          JOHN WESLEY COLLEGE BsC
+          Disaster–EnvironmentManagement
+        </p>
+      </div>
+      <div class="col">
+        <div class="row">
+          <div class="col">
+            <h3>COMPUTER SKILLS</h3>
+            <ul>
+              <li>JIRA</li>
+              <li>Zendesk</li>
+              <li>MS Word</li>
+              <li>MS Excel</li>
+              <li>PowerPoint</li>
+            </ul>
+          </div>
+		  <a href="https://www.idokep.hu/" class="col" target="_blank" title="Időjárás"><img src="https://www.idokep.hu/terkep/hu_mini/i_anim.gif" alt="Felhőkép"></a>
+        </div>
+        <h3>WORK EXPERIENCE</h3>
+        <h4>JUNIOR QA ENGINEER, LILIGO</h4>
+        <h5>SEPT 2019 - BUDAPEST</h5>
+        <ul>
+          <li>QA Engineering</li>
+        </ul>
+        <h4>SERVICE SUPPORT ENGINEER, BT</h4>
+        <h5>JAN - SEPT 2019 - BUDAPEST</h5>
+        <ul>
+          <li> Troubleshooting of network-level related incidents and outages</li>
+          <li>Investigation of technical problems</li>
+          <li> Logging incidents and their status in management system with
+            all related information (logs, reports) and ensuring KPIs SLA are
+            achieved
+          </li>
+          <li>Liaising with other second line operations groups and
+            development to solve incidents
+          </li>
+          <li>Ensures that application operations SLA with end-users is held</li>
+          <li>Collaborating with internal and external 3rd party suppliers</li>
+        </ul>
+        <h4>2ND LINE SUPPORT SPECIALIST, KING</h4>
+        <h5>NOV 2016 - OCT 2018 - STOCKHOLM</h5>
+        <ul>
+          <li>QA Engineering</li>
+          <li>Logging bugs and their status in JIRA with collecting all related information(logs,reports)</li>
+          <li>Forwarding required and precise information to further points of escalation across the business</li>
+          <li>Perform analysis and regular reporting</li>
+          <li>Liaising with other second line operations groups and
+            development to solve incidents
+          </li>
+          <li>Investigating,identifying and providing timely solutions to all technical issues players may be facing</li>
+        </ul>
+        <p id="minute">Loading..</p>
+      </div>
+      </div>
+      </div>
+    </main>
+  </body>
 </html>
