--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
       <div class="container text-light">
         <div class="row p-5">
           <div class="col-md-4"">
-            <h1>EMESE BALLA</h1>
+            <h1>Hi, my name is Emese Balla</h1>
             <hr>
-            <h2>JUNIOR QA ENGINEER</h2>
+            <h2>Junior QA Engineer</h2>
           </div>
 		  <div class="col-md-4 offset-md-4 text-right logo">
 		  
@@ -36,8 +36,7 @@
           continuous improvement.
         </p>
         <h3>CONTACT</h3>
-        <p>Mobile:06309203174</p>
-        <p>Email:emmeseballa@gmail.com</p>
+        <a href="mailto:emmeseballa@gmail.com">Email me!</a>
         <p>Budapest,Hungary</p>
         <p>
           <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/emese-balla-727077155/">
